--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Алексей Почтенных</h1>
-        <p>QA Тестировщик</p>
+        <p>QA Engineer</p>
         <div class="profile-image">
             <img id="uploadedImage" src="111.jpg" alt="Профильное фото" />
         </div>
