--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
     <footer>
         <section class="contact">
-            <h2>Для Связи</h2>
+            <h2>Для Связи - Contacts</h2>
             <ul>
             Email: <a href="mailto:apochtennikh@mail.ru">apochtennikh@mail.ru</a>
             Телефон: <a href="tel:+79162886862">+79162886862</a>
